# llm_gateway

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLATFORM_TASKS.md  PROGRESS.md  README.md  alembic.ini  cookies.txt  docker-compose.override.yml  docker-compose.yml  pydantic_settings.py  pyproject.toml  requirements.txt  snapshot.json
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-review.yml  docker-publish.yml  mirror-gitverse.yml
app/: auth.py  config.py  db.py  main.py  orm_models.py  ratelimit.py  schemas.py  utils.py
app/providers/: base.py  dummy.py  ollama.py  openai_compatible.py
k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  secrets.yaml.example  service.yaml
migrations/: env.py
migrations/versions/: 01b1ac5396be_seed_initial_models.py  4b12416971ad_initial_schema_dialogs_messages_token_.py  f37ce0a5e2aa_add_system_configs_table.py
packs/: PACK-001.json  PACK-002.json  PACK-003.json  PACK-004.json  PACK-005.json  PACK-006.json  PACK-007.json  PACK-008.json  PACK-009.json  PACK-010.json  PACK-011.json  PACK-012.json  PACK-013.json  PACK-014.json  PACK-015.json  PACK-016.json  PACK-017.json  PACK-018.json  PACK-019.json  PACK-020.json  PACK-021.json  PACK-022.json  PACK-023.json  PACK-024.json  PACK-025.json  PACK-026.json  PACK-027.json  PACK-028.json  PACK-029.json  PACK-030.json  PACK-031.json  PACK-032.json  PACK-033.json  PACK-034.json  PACK-035.json  PACK-036.json  PACK-037.json  PACK-038.json  PACK-039.json  PACK-040.json  (+8 more)
src/admin/: __init__.py  auth.py  backend_client.py  setup.py  views.py
tests/: conftest.py  test_chat.py  test_models.py  test_repositories.py  test_services.py
(+83 files in other folders)
